# ai-web-use-agent

./: .gitignore  design.md  main.py  pyproject.toml
evals/: README.md  cli.py  grading.py  history.py  loader.py  models.py  report.py  runner.py
evals/fixtures/live/: automationexercise-checkout.yaml  wikipedia-python-release-year.yaml
evals/fixtures/local/boolean-in-stock/: fixture.yaml  stock.html
evals/fixtures/local/contact-email-extraction/: contact.html  fixture.yaml
evals/fixtures/local/go-back-recovery/: fixture.yaml  wizard-faq.html  wizard-step1.html  wizard-step2-broken.html
evals/fixtures/local/login-gated-order-status/: fixture.yaml  login.html
evals/fixtures/local/max-steps-guardrail/: fixture.yaml  step-a.html  step-b.html  step-c.html
evals/fixtures/local/multi-step-docs-download/: docs-index.html  docs-release-notes.html  download-2-3.html  fixture.yaml  portal.html
evals/fixtures/local/open-ended-summary-judge/: article.html  fixture.yaml
evals/fixtures/local/pricing-page-link/: fixture.yaml  home.html  pricing.html
evals/fixtures/local/product-count/: catalog.html  fixture.yaml
evals/fixtures/local/rss-feed-discovery/: blog.html  feed.xml  fixture.yaml
tests/: conftest.py  test_browser.py  test_cli.py  test_evals_cli.py  test_evals_grading.py  test_evals_history.py  test_evals_loader.py  test_evals_report.py  test_network_guard.py  test_output_spec.py  test_providers.py
webagent/: actions.py  agent.py  browser.py  cli.py  output_spec.py  page_snapshot.py  providers.py  result.py
webagent/js/: extract_elements.js
(+2 files in other folders)
