[project]
name = "ai-web-use-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.45",
    "pydantic>=2.7",
    "pydantic-ai-slim[anthropic]>=0.0.20",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
